[package]
name = "postg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
tokio-postgres = "0.7"
